--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,15 @@
     "@tailwindcss/vite": "^4.0.7",
     "firebase": "^11.3.1",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.475.0",
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.2.0",
     "sort-by": "^1.2.0",
     "tailwindcss": "^4.0.7"
